// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorFooter render snapshot: default args (disableSave: false, saveFailed: false) 1`] = `
<div
  className="editor-footer"
>
  <ModalDialog.Footer>
    <ActionRow>
      <ActionRow.Spacer />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
        variant="tertiary"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          description="Label for cancel button"
          id="authoring.editorfooter.cancelButton.label"
        />
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={false}
<<<<<<< HEAD:src/editors/containers/EditorContainer/components/EditorFooter/__snapshots__/index.test.jsx.snap
        onClick={[MockFunction args.onSave]}
=======
        onClick={
          Object {
            "handleSaveClicked": Object {
<<<<<<< HEAD
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveFunction": [MockFunction args.saveBlock],
=======
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "saveProps": Object {
                "editorRef": [MockFunction args.editorRef],
                "returnUrl": "hocuspocus.ca",
                "saveBlockContent": [MockFunction args.saveBlock],
              },
>>>>>>> f60f6de (feat: WIP)
            },
          }
        }
>>>>>>> 75eca98 (feat: WIP):src/editors/components/EditorFooter/__snapshots__/index.test.jsx.snap
      >
        <FormattedMessage
          defaultMessage="Save"
          description="Label for Save button"
          id="authoring.editorfooter.savebutton.label"
        />
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</div>
`;

exports[`EditorFooter render snapshot: save disabled. Show button spinner 1`] = `
<div
  className="editor-footer"
>
  <ModalDialog.Footer>
    <ActionRow>
      <ActionRow.Spacer />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
<<<<<<< HEAD:src/editors/containers/EditorContainer/components/EditorFooter/__snapshots__/index.test.jsx.snap
        onClick={[MockFunction args.onCancel]}
=======
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
>>>>>>> 75eca98 (feat: WIP):src/editors/components/EditorFooter/__snapshots__/index.test.jsx.snap
        variant="tertiary"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          description="Label for cancel button"
          id="authoring.editorfooter.cancelButton.label"
        />
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={true}
<<<<<<< HEAD:src/editors/containers/EditorContainer/components/EditorFooter/__snapshots__/index.test.jsx.snap
        onClick={[MockFunction args.onSave]}
=======
        onClick={
          Object {
            "handleSaveClicked": Object {
<<<<<<< HEAD
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveFunction": [MockFunction args.saveBlock],
=======
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "saveProps": Object {
                "editorRef": [MockFunction args.editorRef],
                "returnUrl": "hocuspocus.ca",
                "saveBlockContent": [MockFunction args.saveBlock],
              },
>>>>>>> f60f6de (feat: WIP)
            },
          }
        }
>>>>>>> 75eca98 (feat: WIP):src/editors/components/EditorFooter/__snapshots__/index.test.jsx.snap
      >
        <Spinner
          animation="border"
          className="mr-3"
        />
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</div>
`;

exports[`EditorFooter render snapshot: save failed.  Show error message 1`] = `
<div
  className="editor-footer"
>
  <Toast
    onClose={[MockFunction hooks.nullMethod]}
    show={true}
  >
    <FormattedMessage
      defaultMessage="Error: Content save failed. Try again later."
      description="Error message displayed when content fails to save."
      id="authoring.editorfooter.save.error"
    />
  </Toast>
  <ModalDialog.Footer>
    <ActionRow>
      <ActionRow.Spacer />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
<<<<<<< HEAD:src/editors/containers/EditorContainer/components/EditorFooter/__snapshots__/index.test.jsx.snap
        onClick={[MockFunction args.onCancel]}
=======
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
>>>>>>> 75eca98 (feat: WIP):src/editors/components/EditorFooter/__snapshots__/index.test.jsx.snap
        variant="tertiary"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          description="Label for cancel button"
          id="authoring.editorfooter.cancelButton.label"
        />
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={false}
<<<<<<< HEAD:src/editors/containers/EditorContainer/components/EditorFooter/__snapshots__/index.test.jsx.snap
        onClick={[MockFunction args.onSave]}
=======
        onClick={
          Object {
            "handleSaveClicked": Object {
<<<<<<< HEAD
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveFunction": [MockFunction args.saveBlock],
=======
              "returnAnalytics": Object {
                "blockId": null,
                "blockType": null,
                "courseId": null,
              },
              "saveProps": Object {
                "editorRef": [MockFunction args.editorRef],
                "returnUrl": "hocuspocus.ca",
                "saveBlockContent": [MockFunction args.saveBlock],
              },
>>>>>>> f60f6de (feat: WIP)
            },
          }
        }
>>>>>>> 75eca98 (feat: WIP):src/editors/components/EditorFooter/__snapshots__/index.test.jsx.snap
      >
        <FormattedMessage
          defaultMessage="Save"
          description="Label for Save button"
          id="authoring.editorfooter.savebutton.label"
        />
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</div>
`;
